test/valid/Figures/NewRectangle.plume
/**
 * @author Vasco T. Vasconcelos
 * @version $Id: NewRectangle.plume 482 2012-06-04 19:07:29Z tcomp000 $
 */
class NewRectangle extends Object is

	method main : () -> String is
		new Rectangle(3, 4).toString()
